feat: ES 8.5.1 + rebase